# confluence-markdown-roundtrip

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  credentials.example.toml  live-tests.example.toml  pyproject.toml
confluence_markdown_roundtrip/: api.py  cli.py  md_to_storage.py  sentinels.py  storage_to_md.py  subtree.py  workspace.py
confluence_markdown_roundtrip/skill/: SKILL.md
confluence_markdown_roundtrip/tests/: conftest.py  test_aborts.py  test_ancestors.py  test_attachments.py  test_credentials.py  test_edits.py  test_links.py  test_md_to_storage.py  test_panels_gfm_alert.py  test_roundtrip_identity.py  test_storage_to_md.py  test_subtree.py  test_subtree_offline.py  test_units.py  test_workspace.py
confluence_markdown_roundtrip/tests/fixtures/: page-spec.json  template-child-a.xml  template-child-b.xml  template-grandchild.xml  template-root.xml  test-page.json
